// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get default presets functions getMarginPreset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "margin": "theOverrideToken-value-sizing",
  },
  "margin": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getMarginPreset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "margin": "theOverrideToken-value-sizing",
  },
  "margin": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getMarginPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "margin": "theOverrideToken-value-sizing",
  },
  "margin": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getMarginPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "margin": "theOverrideToken-value-sizing",
  },
  "margin": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getMarginPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "margin": "theOverrideToken-value-sizing",
  },
  "margin": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getMarginPreset for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "margin": "theOverrideToken-value-sizing",
  },
  "margin": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getMarginPreset for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 960px)": Object {
    "margin": "theDefaultToken-value-sizing",
  },
  "margin": "theDefaultToken-value-sizing",
}
`;

exports[`get default presets functions getMarginPreset for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 960px)": Object {
    "margin": "theDefaultToken-value-sizing",
  },
  "margin": "theDefaultToken-value-sizing",
}
`;

exports[`get default presets functions getPaddingPreset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-sizing",
  },
  "padding": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getPaddingPreset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-sizing",
  },
  "padding": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getPaddingPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-sizing",
  },
  "padding": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getPaddingPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-sizing",
  },
  "padding": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getPaddingPreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-sizing",
  },
  "padding": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getPaddingPreset for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "padding": "theOverrideToken-value-sizing",
  },
  "padding": "theOverrideToken-value-sizing",
}
`;

exports[`get default presets functions getPaddingPreset for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 960px)": Object {
    "padding": "theDefaultToken-value-sizing",
  },
  "padding": "theDefaultToken-value-sizing",
}
`;

exports[`get default presets functions getPaddingPreset for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 960px)": Object {
    "padding": "theDefaultToken-value-sizing",
  },
  "padding": "theDefaultToken-value-sizing",
}
`;

exports[`get default presets functions getTypePreset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typePresets",
  },
  "fontFamily": "theOverrideToken-value-typePresets",
}
`;

exports[`get default presets functions getTypePreset for responsive tokens when props.overrides is set with breakpoint object with no override path provided: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typePresets",
  },
  "fontFamily": "theOverrideToken-value-typePresets",
}
`;

exports[`get default presets functions getTypePreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typePresets",
  },
  "fontFamily": "theOverrideToken-value-typePresets",
}
`;

exports[`get default presets functions getTypePreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typePresets",
  },
  "fontFamily": "theOverrideToken-value-typePresets",
}
`;

exports[`get default presets functions getTypePreset for responsive tokens when props.overrides is set with breakpoint object with override path as empty string: breakpoint-override-object:with-path-end 2`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typePresets",
  },
  "fontFamily": "theOverrideToken-value-typePresets",
}
`;

exports[`get default presets functions getTypePreset for responsive tokens when props.overrides is set with breakpoint object with override path: breakpoint-override-object:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 1440px)": Object {
    "fontFamily": "theOverrideToken-value-typePresets",
  },
  "fontFamily": "theOverrideToken-value-typePresets",
}
`;

exports[`get default presets functions getTypePreset for responsive tokens with no override path provided, with and without token type at the end: default:no-path-end 1`] = `
Object {
  "@media screen and (min-width: 960px)": Object {
    "fontFamily": "theDefaultToken-value-typePresets",
  },
  "fontFamily": "theDefaultToken-value-typePresets",
}
`;

exports[`get default presets functions getTypePreset for responsive tokens with no override path provided, with and without token type at the end: default:with-path-end 1`] = `
Object {
  "@media screen and (min-width: 960px)": Object {
    "fontFamily": "theDefaultToken-value-typePresets",
  },
  "fontFamily": "theDefaultToken-value-typePresets",
}
`;
